// Vitest Snapshot v1

exports[`matches snapshots for { a: [Combination], b: [Combination] } 1`] = `
[
  {
    "a": [],
    "b": [],
  },
  {
    "a": [
      1,
    ],
    "b": [],
  },
  {
    "a": [
      2,
    ],
    "b": [],
  },
  {
    "a": [
      1,
      2,
    ],
    "b": [],
  },
  {
    "a": [],
    "b": [
      null,
    ],
  },
  {
    "a": [
      1,
    ],
    "b": [
      null,
    ],
  },
  {
    "a": [
      2,
    ],
    "b": [
      null,
    ],
  },
  {
    "a": [
      1,
      2,
    ],
    "b": [
      null,
    ],
  },
  {
    "a": [],
    "b": [
      5,
    ],
  },
  {
    "a": [
      1,
    ],
    "b": [
      5,
    ],
  },
  {
    "a": [
      2,
    ],
    "b": [
      5,
    ],
  },
  {
    "a": [
      1,
      2,
    ],
    "b": [
      5,
    ],
  },
  {
    "a": [],
    "b": [
      null,
      5,
    ],
  },
  {
    "a": [
      1,
    ],
    "b": [
      null,
      5,
    ],
  },
  {
    "a": [
      2,
    ],
    "b": [
      null,
      5,
    ],
  },
  {
    "a": [
      1,
      2,
    ],
    "b": [
      null,
      5,
    ],
  },
]
`;

exports[`matches snapshots for { a: [Combination], c: 6 } 1`] = `
[
  {
    "a": [],
    "c": 6,
  },
  {
    "a": [
      1,
    ],
    "c": 6,
  },
  {
    "a": [
      2,
    ],
    "c": 6,
  },
  {
    "a": [
      1,
      2,
    ],
    "c": 6,
  },
]
`;

exports[`matches snapshots for { a: [Combination], l: [Combination], b: 10, c: 6 } 1`] = `
[
  {
    "a": [],
    "b": 10,
    "c": 6,
    "l": 5,
  },
  {
    "a": [
      1,
    ],
    "b": 10,
    "c": 6,
    "l": 5,
  },
  {
    "a": [
      2,
    ],
    "b": 10,
    "c": 6,
    "l": 5,
  },
  {
    "a": [
      1,
      2,
    ],
    "b": 10,
    "c": 6,
    "l": 5,
  },
  {
    "a": [],
    "b": 10,
    "c": 6,
  },
  {
    "a": [
      1,
    ],
    "b": 10,
    "c": 6,
  },
  {
    "a": [
      2,
    ],
    "b": 10,
    "c": 6,
  },
  {
    "a": [
      1,
      2,
    ],
    "b": 10,
    "c": 6,
  },
]
`;

exports[`matches snapshots for { fnOrUndefined: [Combination], b: 5 } 1`] = `
[
  {
    "b": 5,
    "fnOrUndefined": [Function],
  },
  {
    "b": 5,
    "fnOrUndefined": [Function],
  },
  {
    "b": 5,
    "fnOrUndefined": undefined,
  },
]
`;

exports[`matches snapshots for { id: 'one', key: [Combination] } 1`] = `
[
  {
    "id": "one",
    "key": "a value",
  },
  {
    "id": "one",
    "key": "another value",
  },
]
`;

exports[`matches snapshots for { id: 'optional', key: [Combination] } 1`] = `
[
  {
    "id": "optional",
    "key": "value",
  },
  {
    "id": "optional",
  },
]
`;

exports[`matches snapshots for { id: 'some', key: [Combination] } 1`] = `
[
  {
    "id": "some",
    "key": [],
  },
  {
    "id": "some",
    "key": [
      "a",
    ],
  },
  {
    "id": "some",
    "key": [
      "b",
    ],
  },
  {
    "id": "some",
    "key": [
      "a",
      "b",
    ],
  },
  {
    "id": "some",
    "key": [
      "c",
    ],
  },
  {
    "id": "some",
    "key": [
      "a",
      "c",
    ],
  },
  {
    "id": "some",
    "key": [
      "b",
      "c",
    ],
  },
  {
    "id": "some",
    "key": [
      "a",
      "b",
      "c",
    ],
  },
]
`;

exports[`matches snapshots for { one: [Combination], optional: [Combination] } 1`] = `
[
  {
    "one": 1,
    "optional": 5,
  },
  {
    "one": 2,
    "optional": 5,
  },
  {
    "one": 1,
  },
  {
    "one": 2,
  },
]
`;
